--- a/scripts/Other/sig.html
+++ b/scripts/Other/sig.html
@@ -2,7 +2,16 @@
 	<table style="border:1px dotted darkslateblue;table-layout:fixed;width:525px">
 		<tbody>
 			<tr style="border:1px dotted darkslateblue">
-				<td style="font-family:Helvetica Neue,Helvetica,Arial;margin-left:20px;vertical-align:top;padding:10px;font-weight:bold;color:midnightblue">Lora Johns, J.D., M.L.I.S.</td>
+				<td width="125" style="border-right:1px dotted darkslateblue; width:125px; padding-right:10px;vertical-align: top" valign="top" rowspan="6">
+				</td>
+				<td style="padding-left:10px">
+					<table>
+						<tbody>
+							<tr>
+								<td style ="font-family:Helvetica Neue,Helvetica,Arial;vertical-align:top;padding:10px;font-weight:bold;color:midnightblue" valign="top">Lora Johns, J.D., M.L.I.S.
+								</td>
+							</tr>
+
 			</tr>
 			<tr>
 				<td style="font-family:Helvetica Neue,Helvetica,Arial;margin-left:20px;vertical-align:top;padding:10px;font-style:oblique;color:darkslategray">they/them</td>
@@ -26,6 +35,7 @@
 				<td style="font-family:Helvetica Neue,Helvetica,Arial;vertical-align:top;width:25%"><a href="https://www.medium.com/@lorajohns" style="text-decoration:none;color:darkslateblue"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="20" height="20"><path d="M71.5 142.3c.6-5.9-1.7-11.8-6.1-15.8L20.3 72.1V64h140.2l108.4 237.7L364.2 64h133.7v8.1l-38.6 37c-3.3 2.5-5 6.7-4.3 10.8v272c-.7 4.1 1 8.3 4.3 10.8l37.7 37v8.1H307.3v-8.1l39.1-37.9c3.8-3.8 3.8-5 3.8-10.8V171.2L241.5 447.1h-14.7L100.4 171.2v184.9c-1.1 7.8 1.5 15.6 7 21.2l50.8 61.6v8.1h-144v-8L65 377.3c5.4-5.6 7.9-13.5 6.5-21.2V142.3z"/></svg>Medium</a></td>
 
 			</tr>
+
 
 
 
